Add Minio integration.
