# config/api.yml
@@ -41,6 +41,10 @@ paths:
       responses:
         200:
           description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResourceMeta"
     get:
       tags:
         - chachkie
@@ -64,6 +68,13 @@ paths:
                 $ref: "#/components/schemas/ModelApiException"
 components:
   schemas:
+    ResourceMeta:
+      type: object
+      properties:
+        size:
+          type: number
+        path:
+          type: string
     Chachkie:
       type: object
       properties:
